Test/semantic_tests/error16_dup_struct_name.expected
Error type 16 at Line 7: Redefined structure.
