Test/semantic_tests/error16_dup_struct_name.cmm
struct Point {
    int x;
    int y;
};

struct Point {
    float a;
    float b;
};

int main()
{
    return 0;
}
